<resources>
    <string name="app_name">InstagramClone</string>
    <string name="login">Login</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="description">Description</string>
    <string name="submit">Post</string>
    <string name="takePicture">Take Picture</string>
    <string name="logout">Logout</string>
    <string name="Home">Home</string>
    <string name="Compose">Compose</string>
    <string name="Profile">Profile</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="signup">Sign up</string>
</resources>