<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".Fragments.ComposeFragment"
    android:orientation="vertical">

    <EditText
        android:id="@+id/etDescription"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/description"
        android:inputType="textPersonName"
        android:textColorHint="@color/black" />

    <Button
        android:id="@+id/btTakePicture"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/takePicture"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        android:textColorLink="#FFFFFF"
        app:backgroundTint="@color/black" />

    <ImageView
        android:id="@+id/ivImage"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        tools:srcCompat="@tools:sample/avatars" />

    <Button
        android:id="@+id/btSubmit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/submit"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        app:backgroundTint="@color/black" />

</LinearLayout>